tests/NormalTests/paczka1/small_fuzzy/34868044.err
Error in line 7: 9eUV4k0Dthk A551 93,2
Error in line 9: 9eUV4k0Dthk S940 19,5
Error in line 10: 9eUV4k0Dthk A551 17,9
